Security issue fix.

--- a/notebooks/Step_3A_NLP_preprocessing_spaCy_Way.ipynb
+++ b/notebooks/Step_3A_NLP_preprocessing_spaCy_Way.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "93b28363",
    "metadata": {},
    "source": [
     "This 3A notebook will be perform the second half of NLP preprocessing using spaCy, mostly.  Also, this will produce a large dataframe two lyric sets (with/with out stopwords), each with word counts and spaCy .doc (vectorization, POS tags, Named Entity recognition, etc.).\n",
@@ -27,7 +26,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "770348ff",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +86,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5417edbe",
    "metadata": {},
    "outputs": [
     {
@@ -107,11 +104,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5a6b61e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fs = s3fs.S3FileSystem(anon=False,key='AKIASQCX6MEBAYTNAEHX',secret='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')\n",
+    "fs = s3fs.S3FileSystem(anon=False,key='###'',secret='###')\n",
     "\n",
     "g_df = pd.read_csv('s3://music-lyrics-chain/genres_midcln_df.csv')"
    ]
@@ -119,7 +115,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "173300e1",
    "metadata": {
     "scrolled": true
    },
@@ -153,7 +148,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "df068b52",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +168,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "22e014c7",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +188,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "32f0a515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +204,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "857da8ba",
    "metadata": {
     "scrolled": true
    },
@@ -245,7 +236,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8481c1a",
    "metadata": {},
    "source": [
     "I don't know what %time is telling me.  This nlp(t) step took over an hour."
@@ -254,7 +244,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cb19ff92",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +264,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5cf74c5f",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +405,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cd6be914",
    "metadata": {
     "scrolled": true
    },
@@ -439,7 +426,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4b4bb06",
    "metadata": {},
    "source": [
     "Affinity Score - Sentiment Analysis.  This uses AFINN Lexicon, which is for microblogs (tweets).  This may not be the best sentiment lexicon for songs.  spaCy uses a different one.  Another reason to have a branch off of this trunk."
@@ -448,7 +434,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d07da85b",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +465,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "db265249",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +475,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "18314523",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +501,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9657d950",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +673,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9d7e2bc0",
    "metadata": {
     "scrolled": true
    },
@@ -717,7 +698,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69dc159b",
    "metadata": {},
    "source": [
     "Adding the NLTK vector to this, to keep it aligned with the FNW, and have all data available in one dataset."
@@ -726,7 +706,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f5ea7b1b",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +723,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3cc02ba5",
    "metadata": {
     "scrolled": true
    },
@@ -787,7 +765,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b3db6a13",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +784,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e999d777",
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +968,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38144593",
    "metadata": {},
    "source": [
     "Identify Sentiment, using affinity score."
@@ -1001,7 +976,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fc75c5e5",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +993,6 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a8cfe991",
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1022,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "d27c0033",
    "metadata": {
     "scrolled": true
    },
@@ -1249,7 +1221,6 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "713ac701",
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1259,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1d0f3f3",
    "metadata": {},
    "source": [
     "Creating the _sml version of the lyrics, the spaCy_Doc column, affinity, the word counts, sentiment scores."
@@ -1297,7 +1267,6 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0b50cd99",
    "metadata": {},
    "outputs": [
     {
@@ -1315,7 +1284,6 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "34fdd742",
    "metadata": {
     "scrolled": false
    },
@@ -1353,7 +1321,6 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "2ca72336",
    "metadata": {
     "scrolled": true
    },
@@ -1566,7 +1533,6 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "ba4e4a2e",
    "metadata": {
     "scrolled": true
    },
@@ -1589,7 +1555,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f66e3fe8",
    "metadata": {},
    "outputs": [
     {
@@ -1607,7 +1572,6 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "21c8e119",
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1596,6 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "fbccaba3",
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1613,6 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "08c14fb6",
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1643,6 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "3e4f4beb",
    "metadata": {
     "scrolled": true
    },
@@ -1907,7 +1868,6 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "4afc73f8",
    "metadata": {},
    "outputs": [
     {
@@ -1925,7 +1885,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ca1b2b94",
    "metadata": {},
    "outputs": [
     {
@@ -1956,7 +1915,6 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "5c927d1a",
    "metadata": {
     "scrolled": true
    },
@@ -1979,7 +1937,6 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "97a06879",
    "metadata": {
     "scrolled": true
    },
@@ -2211,7 +2168,6 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "6bef4538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2228,7 +2184,6 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "bb1588c9",
    "metadata": {
     "scrolled": true
    },
@@ -2484,7 +2439,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55aebfdd",
    "metadata": {},
    "source": [
     "Adding the NLTK vector to this, to keep it aligned with the FNW, and have all data available in one dataset.\n",
@@ -2495,7 +2449,6 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "2b8a6178",
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2466,6 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "79011916",
    "metadata": {
     "scrolled": true
    },
@@ -2535,7 +2487,6 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "12195655",
    "metadata": {},
    "outputs": [
     {
@@ -2802,7 +2753,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "559767c3",
    "metadata": {},
    "source": [
     "Identify Sentiment on the smaller set, using affinity score."
@@ -2811,7 +2761,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "12824083",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2831,7 +2780,6 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "3841b0d8",
    "metadata": {
     "scrolled": true
    },
@@ -3341,7 +3289,6 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b97f27a5",
    "metadata": {},
    "outputs": [
     {
@@ -3359,7 +3306,6 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "a7207474",
    "metadata": {
     "scrolled": true
    },
@@ -3384,7 +3330,6 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "291591a9",
    "metadata": {
     "scrolled": true
    },
@@ -3432,7 +3377,6 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "31f610d4",
    "metadata": {},
    "outputs": [
     {
@@ -3495,7 +3439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
